# vivendi-stock

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  app.py  dash_app.py  logger.py  pyproject.toml  requirements.txt  stock_data.py  vivendi_data.py  web_api.py  wsgi.py
.devcontainer/: devcontainer.json
data/: cache.json  storage.json
static/stylesheets/: styles.css
vivendi_stock/: __init__.py  __main__.py  cli.py  cli_app.py  config.py  dash_app.py  logger.py  models.py  rate_limiter.py  vivendi_data.py  web_api.py
vivendi_stock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vivendi_stock/core/: models.py  vivendi_data.py  web_api.py
vivendi_stock/utils/: config.py  logger.py  rate_limiter.py
